<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#edf2ef"
    tools:context=".MainActivity">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="451dp"
        android:layout_height="328dp"
        android:src="@drawable/home_img"
        android:contentDescription="@string/todo"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="16dp"/>
    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:text="@string/hello"
        android:textAlignment="center"
        android:textColor="#540f0f"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"/>
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:text="@string/organize_your_thoughts_ideas_and_inspirations_effortlessly_with_sidenote"
        android:textAlignment="center"
        android:textColor="#8a3434"
        android:textSize="19sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"/>
    <Button
        android:id="@+id/home_to_sign"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_gravity="center"
        android:backgroundTint="#bf4b4b"
        android:text="@string/sign_up"
        android:textSize="22sp"
        android:textColor="#ffffff"/>
    <Button
        android:id="@+id/home_to_log"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:backgroundTint="#ff7d7d"
        android:text="@string/login"
        android:textSize="22sp"
        android:textColor="#ffffff"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"/>
</LinearLayout>

